<resources>
    <string name="text_app_name">Fit4Fun</string>
    <string name="text_welcome_text">Welcome in Fit4Fun</string>
    <string name="text_welcome_text2">Log in and discover the app</string>
    <string name="text_email_adress">Email address</string>
    <string name="hidden_text_email_adress">forexample@mail.com</string>
    <string name="text_password">Password</string>
    <string name="text_hidden_password">Please insert password…</string>
    <string name="text_question_forgot_password">Forgot password?</string>
    <string name="text_login">Login</string>
    <string name="text_no_account">No Account?</string>
    <string name="text_register">Registration</string>
    <string name="text_register_step_1">How old are you?</string>
    <string name="text_register_step_2">How much is your weight?</string>
    <string name="text_register_step_3">What is your goal weight?</string>
    <string name="text_register_step_4">How tall are you?</string>
    <string name="text_profile_title">Edit profile</string>
    <string name="text_first_name">First name</string>
    <string name="text_last_name">Last name</string>
    <string name="text_phone_number">Phonenumber</string>
    <string name="text_weight">Weight</string>
    <string name="text_height">Height</string>
    <string name="text_gender">Sex</string>
    <string name="text_age">Age</string>
    <string name="button_save">Save</string>
    <string name="text_create_account">Create Account</string>
    <string name="text_create_account_description">Please give your data to continue</string>
    <string name="text_password_repeat">Repeat password</string>
    <string name="hidden_text_password_repeat">Please repeat your password again…</string>
    <string name="text_forgot_password">Forgot password</string>
    <string name="text_forgot_password_description">Please enter your email, to get the code to reactivate your account</string>
    <string name="text_reset_password">Reset password</string>
    <string name="text_verify_account">Veryfy account</string>
    <string name="text_verify_account_description">verify your account by entering the verification code, we send to ..... example@mail.com</string>
    <string name="text_resend">Send again</string>
    <string name="text_training_title">Training title</string>
    <string name="text_training_description">Training description</string>
    <string name="text_exercise_title">Exercise title</string>
    <string name="text_exercise_description">Exercise description</string>
</resources>