<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_create_account"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_create_account_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_create_account_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_create_account"
        />

    <TextView
        android:id="@+id/text_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_first_name"
        app:layout_constraintTop_toBottomOf="@+id/text_create_account_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/edittext_first_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/text_first_name"
        android:background="@color/grey"
        android:inputType="text"/>

    <TextView
        android:id="@+id/text_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_last_name"
        app:layout_constraintTop_toBottomOf="@+id/edittext_first_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/edittext_last_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/text_last_name"
        android:background="@color/grey"
        android:inputType="text"/>

    <TextView
        android:id="@+id/text_email_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email_adress"
        app:layout_constraintTop_toBottomOf="@+id/edittext_last_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/edittext_email_adres"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/text_email_adress"
        android:background="@color/grey"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password"
        app:layout_constraintTop_toBottomOf="@+id/edittext_email_adres"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/text_password"
        android:hint="@string/text_hidden_password"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/text_password_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_password_repeat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_password"/>

    <EditText
        android:id="@+id/edittext_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/text_password_repeat"
        android:hint="@string/hidden_text_password_repeat"
        android:background="@color/grey"/>

    <!-- Textview welches nur angezeigt wird, falls PW gewünschte Anforderung nicht erfüllt -->

    <Button
        android:id="@+id/create_account"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/text_create_account"
        android:backgroundTint="@color/main_color"
        app:layout_constraintTop_toBottomOf="@+id/edittext_password_repeat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />







</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>