<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/edit_profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_profile_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="40sp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        />
    <ImageView
        android:id="@+id/image_view_profil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/text_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_first_name"
        app:layout_constraintTop_toBottomOf="@+id/image_view_profil"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/edittext_first_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/text_first_name"
        android:background="@color/grey"
        android:inputType="text"/>

    <TextView
        android:id="@+id/text_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_last_name"
        app:layout_constraintTop_toBottomOf="@+id/edittext_first_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/edittext_last_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/text_last_name"
        android:background="@color/grey"
        android:inputType="text"/>

    <TextView
        android:id="@+id/text_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/edittext_last_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/edittext_phone_number"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/text_phone_number"
        android:background="@color/grey"
        android:inputType="phone"/>

    <TextView
        android:id="@+id/text_email_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email_adress"
        app:layout_constraintTop_toBottomOf="@+id/edittext_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/edittext_email_adres"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/text_email_adress"
        android:background="@color/grey"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_weight"
        app:layout_constraintTop_toBottomOf="@+id/edittext_email_adres"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/edittext_weight"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/text_weight"
        android:background="@color/grey"
        android:inputType="number"/>

    <TextView
        android:id="@+id/text_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_height"
        app:layout_constraintTop_toBottomOf="@+id/edittext_weight"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/edittext_height"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/text_height"
        android:background="@color/grey"
        android:inputType="number"/>

    <TextView
        android:id="@+id/text_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_gender"
        app:layout_constraintTop_toBottomOf="@+id/edittext_height"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

    <!--Anstatt Edittext nur zwei Sachen auswählbar machen: Männlich / Weiblich -->
    <EditText
        android:id="@+id/edittext_gender"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/text_gender"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/text_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_age"
        app:layout_constraintTop_toBottomOf="@+id/edittext_gender"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/edittext_age"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/text_age"
        android:background="@color/grey"
        android:inputType="number"/>

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/button_save"
        android:backgroundTint="@color/main_color"
        app:layout_constraintTop_toBottomOf="@+id/edittext_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>