<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/text_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_forgot_password"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_create_account_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_forgot_password_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_create_account"
        />

    <TextView
        android:id="@+id/text_email_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email_adress"
        app:layout_constraintTop_toBottomOf="@+id/text_create_account_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="150dp" />

    <EditText
        android:id="@+id/edittext_email_adres"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/text_email_adress"
        android:background="@color/grey"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/text_reset_password"
        android:backgroundTint="@color/main_color"
        app:layout_constraintTop_toBottomOf="@+id/edittext_email_adres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>